2009-06-24  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-01-12  Jakub Jelinek  <jakub@redhat.com>

	PR c/32041
	* c-parser.c (c_parser_postfix_expression): Allow `->' in
	offsetof member-designator, handle it as `[0].'.

	2008-09-28  Andrew Pinski  <andrew_pinski@playstation.sony.com>
		Kaushal Kantawala  <kaushal_kantawala@playstation.sony.com>

	PR tree-optimization/36891
	* tree-ssa-loop-im.c (rewrite_reciprocal): Set DECL_GIMPLE_REG_P on
	the newly created variable.
	Create a VECTOR_CST of all 1s for vector types.

2009-06-22  Steven Bosscher  <steven@gcc.gnu.org>
	    Matthias Klose  <doko@ubuntu.com>

	PR objc/28050
	* c-parser.c (c_parser_objc_message_args): Return error_mark_node
	instead of NULL if a parser error occurs.

2009-06-19  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2009-02-03  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	PR C++/36607
	* convert.c (convert_to_integer): Treat OFFSET_TYPE like INTEGER_TYPE.

	2009-05-20  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/40204
	* fold-const.c (fold_binary) <case BIT_AND_EXPR>: Avoid infinite
	recursion if build_int_cst_type returns the same INTEGER_CST as
	arg1.

	2009-02-03  Jakub Jelinek  <jakub@redhat.com>
 
	PR target/35318
	* function.c (match_asm_constraints_1): Skip over
	initial optional % in the constraint.
 
2009-06-19  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2009-02-20  Jakub Jelinek  <jakub@redhat.com>

	PR target/39240
	* calls.c (expand_call): Clear try_tail_call if caller and callee
	disagree in promotion of function return value.

2009-06-19  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2009-01-30  Jakub Jelinek  <jakub@redhat.com>

	PR target/39013
	* c-decl.c (pop_scope): Set DECL_EXTERNAL for functions declared
	inline but never defined.

	2009-04-22  Jakub Jelinek  <jakub@redhat.com>

	PR c/39855
	* fold-const.c (fold_binary) <case LSHIFT_EXPR>: When optimizing