@@ -1,4 +1,14 @@
-2009-06-24  Richard Guenther  <rguenther@suse.de>
+2009-06-25  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline
+	2009-01-07  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/38751
+	* fold-const.c (extract_muldiv): Remove obsolete comment.
+	(fold_plusminus_mult_expr): Undo MINUS_EXPR
+	to PLUS_EXPR canonicalization for the canonicalization.
+
+2009-06-25  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline
 	2009-01-12  Jakub Jelinek  <jakub@redhat.com>
